--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/SamrudhNelli/stock-analyzer#readme",
   "dependencies": {
-    "axios": "^1.11.0"
+    "axios": "^1.11.0",
+    "otplib": "^12.0.1",
+    "totp-generator": "^1.0.0"
   }
-
 }
